<resources>

    <string name="app_name">My World Capital Game</string>
    <string name="capitals_game">World Capitals</string>
    <string name="button_start">Press Here to Begin</string>
    <string name="B1">b1</string>
    <string name="B2">b2</string>
    <string name="B3">b3</string>
    <string name="B4">b4</string>
    <string name="B5">b5</string>
    <string name="questions">"What is the Capital of..."</string>
    <string name="B6">b6</string>
    <string name="title_activity_incorrect_answer">IncorrectAnswer</string>
    <string name="title_activity_choice1">Choice1</string>
</resources>